--- a/src/main/webapp/resources/css/dashboard.css
+++ b/src/main/webapp/resources/css/dashboard.css
@@ -44,7 +44,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #1C1C1C;
+    background-color: #2b333d;
     border-right: 1px solid #eee;
   }
 }
@@ -63,7 +63,7 @@ body {
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #F2F2F2;
-  background-color: #151515;
+  background-color: #24272d;
   font-weight: 400;
 }
 
