--- a/src/main/webapp/resources/css/timeline.css
+++ b/src/main/webapp/resources/css/timeline.css
@@ -115,11 +115,11 @@
 }
 
 .timeline-badge.success {
-	background-color: #3f903f !important;
+	background-color: #D9C3C6 !important;
 }
 
 .timeline-badge.warning {
-	background-color: #f0ad4e !important;
+	background-color: #FFFA88 !important;
 }
 
 .timeline-badge.danger {
