--- a/src/main/webapp/resources/css/tappanel.css
+++ b/src/main/webapp/resources/css/tappanel.css
@@ -21,7 +21,7 @@
   color: #a6a6a6;
 }
 .tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
-  border-bottom: 4px solid #fbcdcf;
+  border-bottom: 4px solid #F0E6E7;
 }
 .tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
   border: 0;
@@ -35,7 +35,7 @@
   margin-top: 0px;
 }
 .tabbable-line > .nav-tabs > li.active {
-  border-bottom: 4px solid #f3565d;
+  border-bottom: 4px solid #D9C3C6;
   position: relative;
 }
 .tabbable-line > .nav-tabs > li.active > a {
