--- a/src/main/webapp/resources/css/bootstrap-theme-dashgum/style.css
+++ b/src/main/webapp/resources/css/bootstrap-theme-dashgum/style.css
@@ -218,10 +218,10 @@ ul.top-menu > li > .logout {
 	font-size: 12px;
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
-	border: 1px solid #64c3c2 !important;
+	border: 1px solid #2B4866 !important;
 	padding: 5px 15px;
 	margin-right: 15px;
-	background: #68dff0;
+	background: #2B4D70;
 	margin-top: 15px;
 }
 
@@ -364,7 +364,7 @@ ul.sidebar-menu li a{
 }
 
 ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
-    background: #68dff0;
+    background: #353D4F;
     color: #fff;
     display: block;
 
@@ -413,8 +413,8 @@ ul.sidebar-menu li a.active i {
 }
 
 .black-bg {
-    background: #D9C3C6;
-    border-bottom: 1px solid #993D65;
+    background: #2a3f54;
+    border-bottom: 1px solid #152638;
 }
 
 .wrapper {
@@ -468,17 +468,17 @@ a.logo span {
 }
 
 ul.top-menu > li > a {
-    color: #666666;
+    color: #eee;
     font-size: 16px;
     border-radius: 4px;
     -webkit-border-radius: 4px;
-    border:1px solid #666666 !important;
+    border:1px solid #eee !important;
     padding: 2px 6px;
     margin-right: 15px;
 }
 
 ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
-    border:1px solid #b6b6b6 !important;
+    border:1px solid #eee !important;
     background-color: transparent !important;
     border-color: #b6b6b6 !important;
     text-decoration: none;
@@ -2215,7 +2215,7 @@ label {
 
 /*footer*/
 .site-footer {
-    background: #0997B2;
+    background: #CCCCCC;
     color: #fff;
     padding: 10px 0;
 }
