--- a/src/main/webapp/resources/css/bootstrap-theme-dashgum/style.css
+++ b/src/main/webapp/resources/css/bootstrap-theme-dashgum/style.css
@@ -781,7 +781,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
 	line-height: 60px;
 	height: 60px;
 	margin: 0;
-	background: #FF6E82;
+	background: #7F8C99;
 	text-align: center;
 }
 
